# programmers

./: .gitignore  CMakeLists.txt  compile_flags.txt
app/: CMakeLists.txt  main.cpp
include/: custom-lib.h
lib/: CMakeLists.txt  custom-lib.cpp
tests/: CMakeLists.txt  custom-lib-test.cpp
